# G-nut-Anubis-complied-in-VS2019

./: Anubis_complete.sln
Anubis_complete/: Anubis_complete.vcxproj  Anubis_complete.vcxproj.filters  abmf0012.19n  conf.cfg  gnut-anubis.cpp
Anubis_complete/Inbetween/Anubis_complete.tlog/: Anubis_complete.lastbuildstate  CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Anubis_complete/newmat/: Makefile.am  include.h  myexcept.cpp  newmat6.cpp  newmat9.cpp  newmatap.h  newmatex.cpp  newmatio.h  precisio.h  svd.cpp
Anubis_complete/src/: Makefile.am
Anubis_complete/src/gall/: gallbias.cpp  gallbias.h  gallfltmat.cpp  gallfltmat.h  gallnav.cpp  gallnav.h  gallobj.cpp  gallobj.h  gallobs.cpp  gallobs.h  galloqc.cpp  galloqc.h  gallotl.cpp  gallotl.h  gallpar.cpp  gallpar.h  gallpcv.cpp  gallpcv.h  gallprec.cpp  gallprec.h  gallprod.cpp  gallprod.h  gallrslt.cpp  gallrslt.h  gallsurf.cpp  gallsurf.h
Anubis_complete/src/gcoders/: gcoder.cpp  gcoder.h  rinexn.cpp  rinexn.h  rinexo.cpp  rinexo.h  rinexo2.cpp  rinexo2.h  rinexo3.cpp  rinexo3.h  sp3.cpp  sp3.h
Anubis_complete/src/gdata/: gdata.cpp  gdata.h  geph.cpp  geph.h  gephprec.cpp  gephprec.h  gmonit.cpp  gmonit.h  gnav.cpp  gnav.h  gnavbds.cpp  gnavbds.h  gnavgal.cpp  gnavgal.h  gnavglo.cpp  gnavglo.h  gnavgps.cpp  gnavgps.h  gnavirn.cpp  gnavirn.h  gnavqzs.cpp  gnavqzs.h  gnavsbs.cpp  gnavsbs.h  gobj.cpp  gobj.h  gobsgnss.cpp  gobsgnss.h  gpppdata.cpp  gpppdata.h  gqcdata.cpp  gqcdata.h  grec.cpp  grec.h  grnxhdr.cpp  grnxhdr.h  gsatdata.cpp  gsatdata.h  gsatgnss.cpp  gsatgnss.h  (+2 more)
Anubis_complete/src/gio/: gfile.cpp  gfile.h  gio.cpp  gio.h  giof.cpp  giof.h  giofz.cpp  giofz.h  glog.cpp  glog.h  gnote.cpp  gnote.h  gxml.cpp  gxml.h  gxtr.cpp  gxtr.h  gxtrgrc.cpp  gxtrgrc.h  gxtrqc.cpp  gxtrqc.h
Anubis_complete/src/gmodels/: gbancroft.cpp  gbancroft.h  gbias.cpp  gbias.h  gblindmops.cpp  gblindmops.h  gdop.cpp  gdop.h  geop.cpp  geop.h  geop80.cpp  geop80.h  gephplan.cpp  gephplan.h  gfit.cpp  gfit.h  gfitlmm.cpp  gfitlmm.h  gfunc.cpp  gfunc.h  gfunclin.cpp  gfunclin.h  gfuncplane.cpp  gfuncplane.h  ggmf.cpp  ggmf.h  ggpt.cpp  ggpt.h  ginterp.cpp  ginterp.h  gmltpth.cpp  gmltpth.h  gmodel.cpp  gmodel.h  gnwmbase.cpp  gnwmbase.h  gnwmsurf.cpp  gnwmsurf.h  gotl.cpp  gotl.h  (+16 more)
Anubis_complete/src/gproc/: gflt.cpp  gflt.h  gfltmat.cpp  gfltmat.h  gpreproc.cpp  gpreproc.h  gspp.cpp  gspp.h  gsppflt.cpp  gsppflt.h
Anubis_complete/src/gprod/: gprod.cpp  gprod.h  gprodclk.cpp  gprodclk.h  gprodcrd.cpp  gprodcrd.h  gprodion.cpp  gprodion.h  gprodmet.cpp  gprodmet.h  gprodtrp.cpp  gprodtrp.h
Anubis_complete/src/gproj/: gproj.cpp  gproj.h  gprojlcc.cpp  gprojlcc.h  gprojlci.cpp  gprojlci.h
Anubis_complete/src/gset/: gcfg_anubis.cpp  gcfg_anubis.h  gsetbase.cpp  gsetbase.h  gsetflt.cpp  gsetflt.h  gsetgen.cpp  gsetgen.h  gsetgnss.cpp  gsetgnss.h  gsetinp.cpp  gsetinp.h  gsetnwm.cpp  gsetnwm.h  gsetout.cpp  gsetout.h  gsetproc.cpp  gsetproc.h  gsetqc.cpp  gsetqc.h  gsetrec.cpp  gsetrec.h  gsetvar.cpp  gsetvar.h
Anubis_complete/src/gutils/: gcommon.cpp  gcommon.h  gconst.cpp  gconst.h  gfileconv.cpp  gfileconv.h  gmatrixconv.cpp  gmatrixconv.h  gmutex.cpp  gmutex.h  gnss.cpp  gnss.h  gnwmconv.cpp  gnwmconv.h  gobs.cpp  gobs.h  gpair.cpp  gpair.h  gsatview.cpp  gsatview.h  gstat.cpp  gstat.h  gstat3d.cpp  gstat3d.h  gsys.cpp  gsys.h  gsysconv.cpp  gsysconv.h  gtetrad.cpp  gtetrad.h  gtime.cpp  gtime.h  gtimesync.cpp  gtimesync.h  gtriple.cpp  gtriple.h  gtypeconv.cpp  gtypeconv.h
Anubis_complete/src/gzstream/: gzstream.cpp  gzstream.h
Anubis_complete/src/md5/: md5.cpp  md5.h
