lib_newmat_newmat = \
newmat.h \
newmatio.h \
bandmat.cpp \
cholesky.cpp \
evalue.cpp \
fft.cpp \
hholder.cpp \
jacobi.cpp \
myexcept.cpp \
myexcept.h \
newfft.cpp \
newmat1.cpp \
newmat2.cpp \
newmat3.cpp \
newmat4.cpp \
newmat5.cpp \
newmat6.cpp \
newmat7.cpp \
newmat8.cpp \
newmat9.cpp \
newmatex.cpp \
newmatrm.cpp \
newmatrm.h \
nm_misc.cpp \
sort.cpp \
submat.cpp \
svd.cpp \
include.h \
newmatrc.h \
newmatap.h \
precisio.h \
controlw.h 

noinst_LIBRARIES = libnewmat.a
libnewmat_a_SOURCES = $(lib_newmat_newmat)
