lib_src_gnut = \
gdata/gephprec.cpp \
gdata/gephprec.h \
gdata/gdata.cpp \
gdata/gdata.h \
gdata/gobsgnss.cpp \
gdata/gobsgnss.h \
gdata/gsatgnss.cpp \
gdata/gsatgnss.h \
gdata/gsatdata.cpp \
gdata/gsatdata.h \
gdata/grec.cpp \
gdata/grec.h \
gdata/grnxhdr.cpp \
gdata/grnxhdr.h \
gdata/gnav.cpp \
gdata/gnav.h \
gdata/geph.cpp \
gdata/geph.h \
gdata/gqcdata.cpp \
gdata/gqcdata.h \
gdata/gnavgps.cpp \
gdata/gnavgps.h \
gdata/gnavglo.cpp \
gdata/gnavglo.h \
gdata/gnavgal.cpp \
gdata/gnavgal.h \
gdata/gnavqzs.cpp \
gdata/gnavqzs.h \
gdata/gnavsbs.cpp \
gdata/gnavsbs.h \
gdata/gnavbds.cpp \
gdata/gnavbds.h \
gdata/gnavirn.cpp \
gdata/gnavirn.h \
gdata/gtrn.cpp \
gdata/gtrn.h \
gdata/gmonit.cpp \
gdata/gmonit.h \
gdata/gpppdata.cpp \
gdata/gpppdata.h \
gdata/gobj.cpp \
gdata/gobj.h \
gproj/gprojlcc.cpp \
gproj/gprojlcc.h \
gproj/gprojlci.cpp \
gproj/gprojlci.h \
gproj/gproj.cpp \
gproj/gproj.h \
gmodels/gpoly.cpp \
gmodels/gpoly.h \
gmodels/gephplan.cpp \
gmodels/gephplan.h \
gmodels/gbancroft.cpp \
gmodels/gbancroft.h \
gmodels/gdop.cpp \
gmodels/gdop.h \
gmodels/gstochasticmodel.cpp \
gmodels/gstochasticmodel.h \
gmodels/gmltpth.cpp \
gmodels/gmltpth.h \
gmodels/gotl.cpp \
gmodels/gotl.h \
gmodels/gpar.cpp \
gmodels/gpar.h \
gmodels/gbias.cpp \
gmodels/gbias.h \
gmodels/gpcv.cpp \
gmodels/gpcv.h \
gmodels/geop80.cpp \
gmodels/geop80.h \
gmodels/gmodel.cpp \
gmodels/gmodel.h \
gmodels/gsppmodel.cpp \
gmodels/gsppmodel.h \
gmodels/ggpt.cpp \
gmodels/ggpt.h \
gmodels/ggmf.cpp \
gmodels/ggmf.h \
gmodels/ginterp.cpp \
gmodels/ginterp.h \
gmodels/gpppmodel.cpp \
gmodels/gpppmodel.h \
gmodels/geop.cpp \
gmodels/geop.h \
gmodels/gtropo.cpp \
gmodels/gtropo.h \
gmodels/gtropoblind.cpp \
gmodels/gtropoblind.h \
gmodels/gnwmbase.cpp \
gmodels/gnwmbase.h \
gmodels/gnwmsurf.cpp \
gmodels/gnwmsurf.h \
gmodels/gblindmops.cpp \
gmodels/gblindmops.h \
gmodels/gfunclin.cpp \
gmodels/gfunclin.h \
gmodels/gfitlmm.cpp \
gmodels/gfitlmm.h \
gmodels/gfuncplane.cpp \
gmodels/gfuncplane.h \
gmodels/gfunc.cpp \
gmodels/gfunc.h \
gmodels/gfit.cpp \
gmodels/gfit.h \
gzstream/gzstream.cpp \
gzstream/gzstream.h \
gall/gallprec.cpp \
gall/gallprec.h \
gall/gallobs.cpp \
gall/gallobs.h \
gall/galloqc.cpp \
gall/galloqc.h \
gall/gallnav.cpp \
gall/gallnav.h \
gall/gallobj.cpp \
gall/gallobj.h \
gall/gallotl.cpp \
gall/gallotl.h \
gall/gallpar.cpp \
gall/gallpar.h \
gall/gallbias.cpp \
gall/gallbias.h \
gall/gallprod.cpp \
gall/gallprod.h \
gall/gallpcv.cpp \
gall/gallpcv.h \
gall/gallfltmat.cpp \
gall/gallfltmat.h \
gall/gallsurf.cpp \
gall/gallsurf.h \
gall/gallrslt.cpp \
gall/gallrslt.h \
md5/md5.cpp \
md5/md5.h \
pugixml/src/pugixml.cpp \
pugixml/src/pugixml.hpp \
pugixml/src/pugiconfig.hpp \
gset/gcfg_anubis.cpp \
gset/gcfg_anubis.h \
gset/gsetinp.cpp \
gset/gsetinp.h \
gset/gsetout.cpp \
gset/gsetout.h \
gset/gsetgnss.cpp \
gset/gsetgnss.h \
gset/gsetproc.cpp \
gset/gsetproc.h \
gset/gsetflt.cpp \
gset/gsetflt.h \
gset/gsetqc.cpp \
gset/gsetqc.h \
gset/gsetgen.cpp \
gset/gsetgen.h \
gset/gsetbase.cpp \
gset/gsetbase.h \
gset/gsetvar.cpp \
gset/gsetvar.h \
gset/gsetrec.cpp \
gset/gsetrec.h \
gset/gsetnwm.cpp \
gset/gsetnwm.h \
gproc/gpreproc.cpp \
gproc/gpreproc.h \
gproc/gsppflt.cpp \
gproc/gsppflt.h \
gproc/gspp.cpp \
gproc/gspp.h \
gproc/gflt.cpp \
gproc/gflt.h \
gproc/gfltmat.cpp \
gproc/gfltmat.h \
gcoders/sp3.cpp \
gcoders/sp3.h \
gcoders/rinexo2.cpp \
gcoders/rinexo2.h \
gcoders/rinexo3.cpp \
gcoders/rinexo3.h \
gcoders/rinexo.cpp \
gcoders/rinexo.h \
gcoders/rinexn.cpp \
gcoders/rinexn.h \
gcoders/gcoder.cpp \
gcoders/gcoder.h \
gutils/gtypeconv.cpp \
gutils/gtypeconv.h \
gutils/gtriple.cpp \
gutils/gtriple.h \
gutils/gsatview.cpp \
gutils/gsatview.h \
gutils/gconst.cpp \
gutils/gconst.h \
gutils/gtime.cpp \
gutils/gtime.h \
gutils/gnss.cpp \
gutils/gnss.h \
gutils/gsys.cpp \
gutils/gsys.h \
gutils/gobs.cpp \
gutils/gobs.h \
gutils/gfileconv.cpp \
gutils/gfileconv.h \
gutils/gsysconv.cpp \
gutils/gsysconv.h \
gutils/gcommon.cpp \
gutils/gcommon.h \
gutils/gstat3d.cpp \
gutils/gstat3d.h \
gutils/gtimesync.cpp \
gutils/gtimesync.h \
gutils/gstat.cpp \
gutils/gstat.h \
gutils/gtetrad.cpp \
gutils/gtetrad.h \
gutils/gmutex.cpp \
gutils/gmutex.h \
gutils/gmatrixconv.cpp \
gutils/gmatrixconv.h \
gutils/gpair.cpp \
gutils/gpair.h \
gutils/gnwmconv.cpp \
gutils/gnwmconv.h \
gprod/gprodclk.cpp \
gprod/gprodclk.h \
gprod/gprod.cpp \
gprod/gprod.h \
gprod/gprodcrd.cpp \
gprod/gprodcrd.h \
gprod/gprodtrp.cpp \
gprod/gprodtrp.h \
gprod/gprodion.cpp \
gprod/gprodion.h \
gprod/gprodmet.cpp \
gprod/gprodmet.h \
gio/gfile.cpp \
gio/gfile.h \
gio/gxtrqc.cpp \
gio/gxtrqc.h \
gio/gxtrgrc.cpp \
gio/gxtrgrc.h \
gio/gio.cpp \
gio/gio.h \
gio/giof.cpp \
gio/giof.h \
gio/giofz.cpp \
gio/giofz.h \
gio/gxtr.cpp \
gio/gxtr.h \
gio/glog.cpp \
gio/glog.h \
gio/gnote.cpp \
gio/gnote.h \
gio/gxml.cpp \
gio/gxml.h 

noinst_LIBRARIES = libgnut.a
libgnut_a_SOURCES = $(lib_src_gnut)
